<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_background_color"
        android:fontFamily="@font/prompt_semibold"
        android:padding="16dp"
        android:text="@string/filter"
        android:textColor="@color/white"
        android:textSize="21dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/prompt_medium"
        android:text="@string/sort_name_by"
        android:textColor="@color/brown_312113"
        android:textSize="16dp" />

    <RadioGroup
        android:id="@+id/sort_name_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/sort_ascending_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:buttonTint="@color/brown_312113"
            android:checked="true"
            android:fontFamily="@font/prompt"
            android:text="@string/ascending"

            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/sort_descending_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:buttonTint="@color/brown_312113"
            android:fontFamily="@font/prompt"
            android:text="@string/descending"
            android:textColor="@color/black" />

    </RadioGroup>

    <TextView
        android:id="@+id/filter_race_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/prompt_medium"
        android:text="@string/filter_race"
        android:textColor="@color/brown_312113"
        android:textSize="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/menu_dropdown"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/races"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>