<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.DetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/character_image"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/character_img"
                android:maxHeight="200dp"
                android:src="@drawable/no_image" />

            <TextView
                android:id="@+id/details_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/prompt_medium"
                android:textColor="@color/brown_312113"
                android:textSize="22dp"
                android:textStyle="bold"
                tools:text="Gandalf" />

            <TextView
                android:id="@+id/character_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/prompt"
                android:textColor="@color/black"
                android:textStyle="normal"
                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin et dolor nec sem ultricies iaculis. Praesent porta, ligula eu tincidunt malesuada, orci arcu volutpat arcu, et congue turpis risus nec dolor. Suspendisse semper malesuada odio, id molestie erat congue nec. Proin pulvinar urna sit amet dignissim dapibus. Sed commodo ac nunc pellentesque dictum." />

            <TextView
                android:id="@+id/character_race_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/prompt_medium"
                android:text="@string/race"
                android:textColor="@color/brown_312113"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/character_race"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/prompt"
                android:textColor="@color/black"
                android:textStyle="normal"
                tools:text="Maiar" />

            <TextView
                android:id="@+id/character_birth_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/prompt_medium"
                android:text="@string/birth"
                android:textColor="@color/brown_312113"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/character_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/prompt"
                android:textColor="@color/black"
                android:textStyle="normal"
                tools:text="Before the Shaping of Arda" />

            <TextView
                android:id="@+id/character_death_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/prompt_medium"
                android:text="@string/death"
                android:textColor="@color/brown_312113"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/character_death"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/prompt"
                android:textColor="@color/black"
                android:textStyle="normal"
                tools:text="January 253019 ,Battle of the Peak immortal" />

            <TextView
                android:id="@+id/character_realm_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/prompt_medium"
                android:text="@string/realm"
                android:textColor="@color/brown_312113"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/character_realm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/prompt"
                android:textColor="@color/black"
                android:textStyle="normal"
                tools:text="Mordor" />

            <TextView
                android:id="@+id/character_culture_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/prompt_medium"
                android:text="@string/culture"
                android:textColor="@color/brown_312113"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/character_culture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/prompt"
                android:textColor="@color/black"
                android:textStyle="normal"
                tools:text="Shire-hobbits" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fandom_link_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="40dp"
                android:backgroundTint="@color/brown_312113"
                android:fontFamily="@font/prompt"
                android:text="@string/fandom_page" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>